--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -14,13 +14,42 @@
         <form method="post">
             <h2 class="sr-only">Login Form</h2><img src="assets/img/OV.png" style="width:100%;">
             <div class="illustration"></div>
-            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
-            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><a href="main.html" class="btn btn-primary btn-block">Log in</a></div><a href="#" class="forgot">Forgot your email or password?</a></form>
+            <div class="form-group"><input id = "username" class="form-control" type="email" name="email" placeholder="Email"></div>
+            <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
+            <div class="form-group"><a onclick = login() class="btn btn-primary btn-block">Log in</a></div><a href="#" class="forgot">Forgot your email or password?</a></form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+	var username;
+	var password;
+	
+    var xhr = new XMLHttpRequest();
+    xhr.onload = function() {
+		if (xhr.readyState == 4 && xhr.status == 200) {
+			console.log(this.responseText);
+			if(this.responseText == 0) {
+				// Do some shit here that shows it is a wrong username or password on the page ;p
+	    		//document.getElementById("loginForm").innerHTML = "Wrong Username and Password, Please Try Again";
+			} else {
+				//somehow redirect to the second page
+				window.open("./main.html");
+			}
+		}
+	}
+	
+    // function for when login button button is pressed
+    function login() {
+    	username = document.getElementById("username").value;
+    	password = document.getElementById("password").value;
+    	console.log(username);
+    	console.log(password);
+    	xhr.open("GET", "./OV/login/" + username + "/" + password);
+    	xhr.send(this.responseText);
+    }
+    
+	</script>
 </body>
 
 </html>
