--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -96,6 +96,20 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script type="text/javascript">
+    var xhr = new XMLHttpRequest();
+    xhr.onload = function() {
+		if (xhr.readyState == 4 && xhr.status == 200) {
+			console.log(this.responseText);
+			if(this.responseText == 0) {
+				window.open("")
+			} else {
+				//somehow redirect to the second page
+				window.open("./main.html");
+			}
+		}
+	}
+    </script>
 </body>
 
 </html>
