--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -34,7 +34,7 @@
 	    		//document.getElementById("loginForm").innerHTML = "Wrong Username and Password, Please Try Again";
 			} else {
 				//somehow redirect to the second page
-				window.open("./main.html");
+				window.open("./main.html", "_self");
 			}
 		}
 	}
