--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -16,7 +16,9 @@
             <div class="illustration"></div>
             <div class="form-group"><input id = "username" class="form-control" type="email" name="email" placeholder="Email"></div>
             <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><a onclick = login() class="btn btn-primary btn-block">Log in</a></div><a href="#" class="forgot">Forgot your email or password?</a></form>
+            <div class="form-group"><button onclick = login() class="btn btn-primary btn-block">Log in</button>
+            </div><a href="#" class="forgot">Forgot your email or password?</a>
+        </form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
