--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body>
+<body onload = startup()>
     <div>
         <div class="container">
             <div class="row" style="padding-top:12px;padding-bottom:6px;">
@@ -96,7 +96,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script type="text/javascript">
+    <script>
     var xhr = new XMLHttpRequest();
     xhr.onload = function() {
 		if (xhr.readyState == 4 && xhr.status == 200) {
@@ -106,7 +106,11 @@
 			}
 		}
 	}
-    xhr.open("GET", "./OV/test");
+    
+    function startup() {
+    	xhr.open("GET", "./OV/test");
+    	xhr.send(this.responseText);
+    }
     </script>
 </body>
 
