Add working status to overview

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -138,7 +138,7 @@
     	    ver.appendChild(name);
     	    
     		var active = document.createElement("td");
-    	    var atxt = document.createTextNode("WIP");
+    	    var atxt = document.createTextNode(list[i].status);
     	    active.appendChild(atxt);
     	    ver.appendChild(active);
 
