--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -67,6 +67,7 @@
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
+                                        	<h4 id=infotitle class="modal-title"></h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">x</span></button></div>
                                         <div class="modal-body" style="padding:0;">
                                             <div class="table-responsive">
                                                 <table class="table">
