--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -30,7 +30,7 @@
                                 <div class="dropdown d-inline-flex"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="margin-right:6px;margin-left:6px;">Status</button>
                                     <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Active</a><a class="dropdown-item" role="presentation" href="#">Not active</a><a class="dropdown-item" role="presentation" href="#">Not active yet</a></div>
                                 </div><button onclick = searchupdate() class="btn btn-primary" type="button" style="margin-left:6px;">Search</button>
-                                <div class="btn-group ml-auto" role="group"><button class="btn btn-primary" type="button" style="margin:6px;">Import</button><button class="btn btn-primary" type="button" style="margin:6px;">Export</button></div>
+                                <div class="btn-group ml-auto" role="group"><button class="btn btn-primary" type="button" style="margin:6px;">Import</button><button class="btn btn-primary" type="button" onclick="location.href='./OV/main/export.csv'" style="margin:6px;">Export</button></div>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,6 @@
     function searchupdate() {
     	let crdnr = document.getElementById("searchid").value;
     	let fullname = document.getElementById("searchname").value;
-<<<<<<< HEAD
     	if(crdnr != "" && fullname != "") {
     		xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname);
     	} else if(crdnr == "" && fullname != "") {
@@ -201,11 +200,6 @@
     			}				
     		}
     	}
-=======
-    	xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname);
-    	xhr.send(this.responseText);
-    	
->>>>>>> branch 'master' of https://git.snt.utwente.nl/s1898922/mod04di08.git
     }
     
     function updateinfo() {
