--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -30,7 +30,7 @@
                                 <div class="dropdown d-inline-flex"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="margin-right:6px;margin-left:6px;">Status</button>
                                     <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Active</a><a class="dropdown-item" role="presentation" href="#">Not active</a><a class="dropdown-item" role="presentation" href="#">Not active yet</a></div>
                                 </div><button onclick = searchupdate() class="btn btn-primary" type="button" style="margin-left:6px;">Search</button>
-                                <div class="btn-group ml-auto" role="group"><form id="upload" enctype="multipart/form-data" method="post" action="/OV/main/import"><button class="btn btn-primary" type="button" onclick="openFileDialog();" style="margin:6px;">Import</button><input type="file" id="fileLoader" name="files" title="Load File" /></form><button class="btn btn-primary" type="button" onclick="location.href='./OV/main/export.csv'" style="margin:6px;">Export</button></div>
+                                <div class="btn-group ml-auto" role="group"><form id="upload" enctype="multipart/form-data" method="post" action="/OV/main/import"><button class="btn btn-primary" type="button" onclick="openFileDialog();" style="margin:6px;">Import</button><input type="file" id="fileLoader" onchange="this.form.submit()" name="files" title="Load File" /></form><button class="btn btn-primary" type="button" onclick="location.href='./OV/main/export.csv'" style="margin:6px;">Export</button></div>
                             </div>
                         </div>
                     </div>
