--- a/src/main/webapp/relogin.html
+++ b/src/main/webapp/relogin.html
@@ -16,6 +16,7 @@
             <div class="illustration"></div>
             <div class="form-group"><input id = "username" class="form-control" type="text" name="username" placeholder="Username"></div>
             <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
+            <label id="warning" style="color:red;">Either username or password is wrong or does not exist, please try again.</label>
             <div class="form-group"><button onclick = login() class="btn btn-primary btn-block">Log in</button>
             </div><a href="#" class="forgot">Forgot your email or password?</a>
         </form>
