--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,7 +18,8 @@
             <div class="form-group"><input id = "username" class="form-control" type="text" name="username" placeholder="Username"></div>
             <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
             <div class="form-group"><button onclick = login() class="btn btn-primary btn-block">Log in</button></div>
-            <div class="form-group"><div id= "googleLogin" class="g-signin2" data-onsuccess="onSignIn"></div></div>
+            <p id="or">or</p>
+            <div class="form-group"><div data-width="auto" class="g-signin2" data-onsuccess="onSignIn"></div></div>
             <a href="#" class="forgot">Forgot your email or password?</a>
         </form>
     </div>
