--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -27,11 +27,11 @@
                     <div class="card" id="card-style">
                         <div class="card-body">
                             <div class="col-md-12 d-flex align-items-center"><img src="assets/img/OV.png" style="height:70px;margin-right:12px;"><input id = "searchid" type="text" placeholder="Employee Number" style="margin:6px;"><input id = "searchname" type="text" placeholder="Full Name" style="margin:6px;">
-                                <div class="dropdown d-inline-flex"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="margin-right:6px;margin-left:6px;">Status</button>
-                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Active</a><a class="dropdown-item" role="presentation" href="#">Not active</a><a class="dropdown-item" role="presentation" href="#">Not active yet</a></div>
+                                <div class="dropdown d-inline-flex"><button id="statusButton" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="margin-right:6px;margin-left:6px;">Status</button>
+                                    <div id="statusDropdown" class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Active</a><a class="dropdown-item" role="presentation" href="#">Not active</a><a class="dropdown-item" role="presentation" href="#">Not active yet</a></div>
                                 </div><button onclick = searchupdate() class="btn btn-primary" type="button" style="margin-left:6px;">Search</button>
-                                <div class="btn-group ml-auto" role="group"><div class="dropdown d-inline-flex" style="margin:6px;"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="margin-right:6px;margin-left:6px;">Office</button>
-                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Amersfoort</a><a class="dropdown-item" role="presentation" href="#">Apeldoorn</a><a class="dropdown-item" role="presentation" href="#">Den Haag</a><a class="dropdown-item" role="presentation" href="#">Münster</a><a class="dropdown-item" role="presentation" href="#">Oldenzaal</a></div>
+                                <div class="btn-group ml-auto" role="group"><div class="dropdown d-inline-flex" style="margin:6px;"><button id="officeButtton" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="margin-right:6px;margin-left:6px;">Office</button>
+                                    <div id="officeDropdown" class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Amersfoort</a><a class="dropdown-item" role="presentation" href="#">Apeldoorn</a><a class="dropdown-item" role="presentation" href="#">Den Haag</a><a class="dropdown-item" role="presentation" href="#">Münster</a><a class="dropdown-item" role="presentation" href="#">Oldenzaal</a></div>
                                 </div><form id="upload" enctype="multipart/form-data" method="post" action="/OV/main/import"><button class="btn btn-primary" type="button" onclick="openFileDialog();" style="margin:6px;">Import</button><input type="file" id="fileLoader" onchange="this.form.submit()" name="files" title="Load File" /></form><button class="btn btn-primary" type="button" onclick="location.href='./OV/main/export.csv'" style="margin:6px;">Export</button></div>
                             </div>
                         </div>
@@ -244,7 +244,24 @@
     	body.innerHTML = "";
     	$("#empInfo").modal();
     }
-    
+
+    $(function(){
+
+        $("#officeDropdown a").click(function(){
+
+            $("#officeButtton").text($(this).text());
+            $("#officeButtton").val($(this).text());
+
+        });
+
+        $("#statusDropdown a").click(function(){
+
+            $("#statusButton").text($(this).text());
+            $("#statusButton").val($(this).text());
+
+        });
+
+    });
     xhr.open("GET", "./OV/test");
     xhr.send(this.responseText);
     
