--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -17,7 +17,7 @@
             <div class="illustration"></div>
             <div class="form-group"><input id = "username" class="form-control" type="text" name="username" placeholder="Username"></div>
             <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><button onclick = login() class="btn btn-primary btn-block">Log in</button></div>
+            <div class="form-group"><button type="button" onclick = login() class="btn btn-primary btn-block">Log in</button></div>
             <p id="or">or</p>
             <div class="form-group"><div data-width="auto" class="g-signin2" data-onsuccess="onSignIn"></div></div>
             <a href="#" class="forgot">Forgot your email or password?</a>
@@ -33,16 +33,13 @@
 	
     var xhr = new XMLHttpRequest();
     xhr.onload = function() {
-		if (xhr.readyState == 4 && xhr.status == 200) {
-			console.log(this.responseText);
 			if(this.responseText == 0) {
-				window.open("./relogin.html", "_self");
+				console.log("fail");
 			} else {
 				//somehow redirect to the second page
 				window.open("./main.html", "_self");
 			}
-		}
-	}
+	};
 	
     // function for when login button button is pressed
     function login() {
