--- a/src/main/webapp/relogin.html
+++ b/src/main/webapp/relogin.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="477517551933-umld4fqt1rrf4mhou2t7pd4nb5ruepus.apps.googleusercontent.com">
     <title>Module4</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -17,16 +16,14 @@
             <div class="illustration"></div>
             <div class="form-group"><input id = "username" class="form-control" type="text" name="username" placeholder="Username"></div>
             <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><button onclick = login() class="btn btn-primary btn-block">Log in</button></div>
-            <p id="or">or</p>
-            <div class="form-group"><div data-width="auto" class="g-signin2" data-onsuccess="onSignIn"></div></div>
-            <a href="#" class="forgot">Forgot your email or password?</a>
+            <label id="warning" style="color:red;">Either username or password is wrong or does not exist, please try again.</label>
+            <div class="form-group"><button onclick = login() class="btn btn-primary btn-block">Log in</button>
+            </div><a href="#" class="forgot">Forgot your email or password?</a>
         </form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script>
 	var username;
 	var password;
@@ -52,13 +49,6 @@
     	console.log(password);
     	xhr.open("GET", "./OV/login/" + username + "/" + password);
     	xhr.send(this.responseText);
-    }
-
-    function onSignIn(googleUser) {
-        var id_token = googleUser.getAuthResponse().id_token;
-        xhr.open('POST', './OV/googleLogin');
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-        xhr.send(id_token);
     }
     
 	</script>
