Fix logout button style

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -71,7 +71,7 @@
 										onclick="location.href='./OV/main/export.csv'"
 										style="margin: 6px;">Export</button>
 									<button onclick=logout() class="btn btn-primary" type="button"
-										style="margin-left: 6px;">Log Out</button>
+										style="margin: 6px;">Log Out</button>
 								</div>
 							</div>
 						</div>
