--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -273,12 +273,6 @@
 
 		}
 
-		function requestContent() {
-			xhr.open("GET", "./OV/test");
-			xhr.send();
-			window.setTimeout(requestContent2, 200);
-		}
-
 		function newPayrate() {
 
 		}
@@ -344,6 +338,10 @@
 		function requestContent3() {
 			xhr.open("GET", "./OV/main/databases");
 			xhr.send();
+		}
+		
+		function logout(){
+			
 		}
 	</script>
 </body>
