--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -83,7 +83,7 @@
 				<div class="col-md-12">
 					<div class="card">
 						<div class="card-body" style="padding: 0px;">
-							<div class="table-responsive">
+							<div class="table-responsive table-hover">
 								<table class="table">
 									<thead>
 										<tr>
