--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -21,13 +21,13 @@
 <body onload="requestContent()">
 	<div>
 		<div class="container">
-			<div class="row" style="padding-top: 12px; padding-bottom: 6px;">
+			<div class="row" style="padding-top: 12px; padding-bottom: 6px;padding-right: 20px; padding-left: 15px;">
 				<div class="col-md-12" style="padding: 0px;">
 					<div class="card" id="card-style">
 						<div class="card-body">
 							<div class="col-md-12 d-flex align-items-center">
 								<img src="assets/img/OV.png"
-									style="height: 70px; margin-right: 12px;"><input
+									style="height: 80px; margin-right: 12px;"><input
 									id="searchid" type="text" placeholder="Employee Number"
 									style="margin: 6px;"><input id="searchname" type="text"
 									placeholder="Full Name" style="margin: 6px;">
@@ -35,7 +35,7 @@
 									<button id="statusButton"
 										class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
 										aria-expanded="false" type="button"
-										style="margin-right: 6px; margin-left: 6px;">Status</button>
+										style="margin-right: 6px; margin-left: 6px; border-radius : 6px; ">Status</button>
 									<div id="statusDropdown" class="dropdown-menu" role="menu">
 										<a id="statusA" value = "A" onclick=statusFilterA() class="dropdown-item" role="presentation">Active</a>
 											<a id="statusI" value = "I" onclick=statusFilterI() class="dropdown-item" role="presentation">Not Active</a>
@@ -43,13 +43,13 @@
 									</div>
 								</div>
 								<button onclick=searchupdate() class="btn btn-primary"
-									type="button" style="margin-left: 6px;">Search</button>
+									type="button" style="margin-left: 6px;border-radius: 6px;">Search</button>
 								<div class="btn-group ml-auto" role="group">
 									<div class="dropdown d-inline-flex" style="margin: 6px;">
 										<button id="officeButtton"
 											class="btn btn-primary dropdown-toggle"
 											data-toggle="dropdown" aria-expanded="false" type="button"
-											style="margin-right: 6px; margin-left: 6px;">Office</button>
+											style="margin-right: 6px; margin-left: 6px;border-radius: 6px; padding-left: 20px;">Office</button>
 										<div id="officeDropdown" class="dropdown-menu" role="menu">
 											<a class="dropdown-item" role="presentation" href="#">Amersfoort</a><a
 												class="dropdown-item" role="presentation" href="#">Apeldoorn</a><a
@@ -61,15 +61,15 @@
 									<form id="upload" enctype="multipart/form-data" method="post"
 										action="./OV/main/import">
 										<button class="btn btn-primary" type="button"
-											onclick="openFileDialog();" style="margin: 6px;">Import</button>
+											onclick="openFileDialog();" style="margin: 6px; border-radius: 6px;">Import</button>
 										<input type="file" id="fileLoader"
 											onchange="this.form.submit()" name="files" title="Load File" />
 									</form>
 									<button class="btn btn-primary" type="button"
 										onclick="location.href='./OV/main/export.csv'"
-										style="margin: 6px;">Export</button>
+										style="margin: 6px; border-radius: 6px;">Export</button>
 									<button onclick=logout() class="btn btn-primary" type="button"
-										style="margin: 6px;">Log Out</button>
+										style="margin: 6px; border-radius: 6px;">Log Out</button>
 								</div>
 							</div>
 						</div>
