fixed indentation in web.xml and admin update

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -197,7 +197,8 @@
 	}
     
     function updateOVAccount(){
-    	var body = document.getElementById('OVAccountList');
+    	var body = document.getElement
+    	ById('OVAccountList');
 		body.innerHTML = "";
 
 		for (var i = 0; i < ovacc.length; i++) {
